--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   "author": "Daniel Somerfield",
   "license": "PROPRIETARY",
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "@types/jest": "^29.4.0",
+    "axios": "^1.3.4",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.21",
+    "ts-jest": "^29.0.5"
   },
   "dependencies": {
     "@typescript-eslint/parser": "^5.48.0",
